--- a/Python_scRNAseq_2.ipynb
+++ b/Python_scRNAseq_2.ipynb
@@ -297,6 +297,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f48db567",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bdata.obs"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8557c62b",
    "metadata": {},
@@ -317,6 +327,16 @@
     "    frameon=False,\n",
     "    ncols=2\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e1a3e8f",
+   "metadata": {},
+   "source": [
+    "精度を上げるには、マーカー遺伝子とアノテーションする細胞型の慎重な選択が必要。（ただそれを突き詰めていくとエキスパートの専門知識でマニュアルアノテーションするのと労力が変わらなくなっていく気もするが）\n",
+    "\n",
+    "いっぽうで、クラスタレベルではなく、細胞ひとつひとつの予測が可能な点は強み。数千個の細胞をマニュアルアノテーションするのは大変。"
    ]
   },
   {
@@ -620,6 +640,7 @@
    "outputs": [],
    "source": [
     "%%script true\n",
+    "# predict関数で、soft=Trueとすれば、最大確率のラベルだけでなく、それぞれのラベルの確率値をちゃんと出してくれる\n",
     "alldata.obs['predicted_celltype'] = label_model.predict(alldata)"
    ]
   },
@@ -660,6 +681,16 @@
    "outputs": [],
    "source": [
     "predictions = pd.read_csv('./models/label_transfer/celltype_predictions.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea07b1f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions"
    ]
   },
   {
